syntax = "proto3";

package e2e.cats;

import "scalapb/scalapb.proto";
import "validate/validate.proto";

option (scalapb.options) = {
  scope: FILE
  field_transformations: [
    {
      when: {
        options {
          [validate.rules] {
            repeated: {min_items: 1}
          }
        }
      }
      set: {
        [scalapb.field] {
          collection: {
            type: "_root_.cats.data.NonEmptyChain"
            adapter: "_root_.scalapb.validate.cats.NonEmptyChainAdapter"
            non_empty: true
          }
        }
      }
    }
  ]
};

message NonEmptyChainTest {
  repeated bool values = 1 [(validate.rules).repeated = { min_items: 1 }];
}
